--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
           </div> 
         <div class="section-buttons section-body-sm">
-          <a href="https://drive.google.com/file/d/17IJUgdFgXS6uMXxDyaYcVcZVskfmPH3w/view?usp=sharing" class="btn">Download CV</a>
+          <a href="https://docs.google.com/document/d/13UsOCiM83BEE1gGU9Sk589D3x_3pCnmm/edit?usp=sharing&ouid=104868191035196183471&rtpof=true&sd=true" class="btn">Download CV</a>
          
           </div>
         </div>
@@ -622,3 +622,4 @@
 
 
 </html>
+
