--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
           </div> 
         <div class="section-buttons section-body-sm">
-          <a href="https://docs.google.com/document/d/13UsOCiM83BEE1gGU9Sk589D3x_3pCnmm/edit?usp=drive_link&ouid=104868191035196183471&rtpof=true&sd=true" class="btn">Download CV</a>
+          <a href="https://docs.google.com/document/d/13UsOCiM83BEE1gGU9Sk589D3x_3pCnmm/edit?usp=drive_link&ouid=104868191035196183471&rtpof=true&sd=true" class="btn" download>Download CV</a>
          
           </div>
         </div>
@@ -622,5 +622,6 @@
 
 
 </html>
+
 
 
