--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
           </div> 
         <div class="section-buttons section-body-sm">
-          <a href="https://docs.google.com/document/d/13UsOCiM83BEE1gGU9Sk589D3x_3pCnmm/edit?usp=drive_link&ouid=104868191035196183471&rtpof=true&sd=true" class="btn" download>Download CV</a>
+          <a href="https://drive.google.com/drive/folders/1xuG6Si4WHaVy7Kbl5BrSE94FkVPuOAHH?usp=sharing" class="btn" download>Download CV</a>
          
           </div>
         </div>
@@ -622,6 +622,7 @@
 
 
 </html>
+
 
 
 
